# mpi_example

./: CMakeLists.txt  README.md  main.cpp
